final for X-exam

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -154,6 +154,21 @@
 </div>
 <!-- GOOGLE MAPS SIDE PANEL -->
 
+<!-- GOOGLE MAPS USER PANEL -->
+<div class="panel panel-primary" id='messages-panel-head'>
+  <div class="panel-heading">
+    Messages <span class='badge'></span>
+  </div>
+  <div class="panel-body">
+    <div class='messages-of-user' id='scroll-messages'></div>
+    <form class='form' id='messages-maps-form'>
+      <input name='message' type='text' class='form-control center-block' id='comment-maps-input' placeholder='Message: '>
+      <input name='currentUser' type='text' class='form-control center-block hidden' id='user-maps-input'>
+      <button type='submit' class='btn btn-primary center-block' id='messages-maps-button'>Send</button>
+    </form>
+  </div>
+</div>
+
 
 
 
